force-app/main/default/objects/df_160_gldsbrev_sublist__c/df_160_gldsbrev_sublist__c.object-meta.xml
<CustomObject>
    <label>Gældsbrev</label>
    <nameField>
        <label>Gældsbrev Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gældsbrevs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>