force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/afdragenes_frekvens_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>afdragenes_frekvens_gldsbrev__c</fullName>
    <label>Afdragenes frekvens</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>afdr_frekv_mndligt</fullName>
                <label>Månedligt</label>
            </value>
            <value>
                <fullName>afdr_frekv_kvartal</fullName>
                <label>Kvartalsvist</label>
            </value>
            <value>
                <fullName>afdr_frekv_halvrligt</fullName>
                <label>Halvårligt</label>
            </value>
            <value>
                <fullName>afdr_frekv_rligt</fullName>
                <label>Årligt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>