force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/afdragenes_strrelse_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>afdragenes_strrelse_gldsbrev__c</fullName>
    <label>Afdragenes størrelse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>