force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/dato_for_frste_afdrag_gldsbrev_t_320__c.field-meta.xml
<CustomField>
    <fullName>dato_for_frste_afdrag_gldsbrev_t_320__c</fullName>
    <label>Dato for første afdrag 4f7ec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>