force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/dato_for_udbetaling_gldsbrev_txt__c.field-meta.xml
<CustomField>
    <fullName>dato_for_udbetaling_gldsbrev_txt__c</fullName>
    <label>Dato for udbetaling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>