force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/hvornr_udbetales_lnet_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>hvornr_udbetales_lnet_gldsbrev__c</fullName>
    <label>Hvornår sker udbetalingen af lån fafdf</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>hvornr_udb_spec_dato_gldsbrev</fullName>
                <label>På specifik dato</label>
            </value>
            <value>
                <fullName>hvornr_udb_v_underskr_gldsbrev</fullName>
                <label>Ved underskrift af låneaftalen</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>