force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/ln_opsigelse_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>ln_opsigelse_gldsbrev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kan långiver opsige lånet?</label>
    <type>Checkbox</type>
</CustomField>