force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/lnebelb_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>lnebelb_gldsbrev__c</fullName>
    <label>Lånebeløb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>