force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/opsigelsesvarsel_dage_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>opsigelsesvarsel_dage_gldsbrev__c</fullName>
    <label>Opsigelsesvarsel (dage)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>