force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/rentesats_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>rentesats_gldsbrev__c</fullName>
    <label>Rentesats i procent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>