force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/skal_lnet_forrentes_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>skal_lnet_forrentes_gldsbrev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skal lånet forrentes?</label>
    <type>Checkbox</type>
</CustomField>