force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/tilbagebetaling_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>tilbagebetaling_gldsbrev__c</fullName>
    <label>Tilbagebetaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>tilbbetal_rente_afdr_gldsbrev</fullName>
                <label>Lånet er rente- og afdragsfrit</label>
            </value>
            <value>
                <fullName>tilbbetal_best_dato_gldsbrev</fullName>
                <label>På bestemt dato</label>
            </value>
            <value>
                <fullName>tilbbetal_v_afdrag_gldsbrev</fullName>
                <label>Ved afdrag</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>