force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/tilbagebetalingsdato_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>tilbagebetalingsdato_gldsbrev__c</fullName>
    <label>Tilbagebetalingsdato</label>
    <type>DateTime</type>
</CustomField>