force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/tilbagebetalingsdato_gldsbrev_tx_321__c.field-meta.xml
<CustomField>
    <fullName>tilbagebetalingsdato_gldsbrev_tx_321__c</fullName>
    <label>Tilbagebetalingsdato f95f8</label>
    <length>255</length>
    <type>Text</type>
</CustomField>