force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/vlg_lngiver_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>vlg_lngiver_gldsbrev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg långiver</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_lngiver_gldsbrev</relationshipLabel>
    <relationshipName>vlg_lngiver_gldsbrev</relationshipName>
    <type>Lookup</type>
</CustomField>