force-app/main/default/objects/df_160_gldsbrev_sublist__c/fields/vlg_lntager_gldsbrev__c.field-meta.xml
<CustomField>
    <fullName>vlg_lntager_gldsbrev__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vælg låntager</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>vlg_lntager_gldsbrev</relationshipLabel>
    <relationshipName>vlg_lntager_gldsbrev</relationshipName>
    <type>Lookup</type>
</CustomField>